# planck2

./: .gitignore  README.md  pyproject.toml
auxiliary/: atomic_radii.py  periodic_table.py
basissets/: create_basis.awk
basissets/3-21g/: 3-21g-10.basis  3-21g-11.basis  3-21g-12.basis  3-21g-13.basis  3-21g-14.basis  3-21g-15.basis  3-21g-16.basis  3-21g-17.basis  3-21g-18.basis  3-21g-19.basis  3-21g-20.basis  3-21g-21.basis  3-21g-22.basis  3-21g-23.basis  3-21g-24.basis  3-21g-25.basis  3-21g-26.basis  3-21g-27.basis  3-21g-28.basis  3-21g-29.basis  3-21g-3.basis  3-21g-30.basis  3-21g-31.basis  3-21g-32.basis  3-21g-33.basis  3-21g-34.basis  3-21g-35.basis  3-21g-36.basis  3-21g-37.basis  3-21g-38.basis  3-21g-39.basis  3-21g-4.basis  3-21g-40.basis  3-21g-41.basis  3-21g-42.basis  3-21g-43.basis  3-21g-44.basis  3-21g-45.basis  3-21g-46.basis  3-21g-47.basis  (+12 more)
basissets/6-31g/: 6-31g-10.basis  6-31g-11.basis  6-31g-12.basis  6-31g-13.basis  6-31g-14.basis  6-31g-15.basis  6-31g-16.basis  6-31g-17.basis  6-31g-18.basis  6-31g-19.basis  6-31g-20.basis  6-31g-21.basis  6-31g-22.basis  6-31g-23.basis  6-31g-24.basis  6-31g-25.basis  6-31g-26.basis  6-31g-27.basis  6-31g-28.basis  6-31g-29.basis  6-31g-3.basis  6-31g-30.basis  6-31g-31.basis  6-31g-32.basis  6-31g-33.basis  6-31g-34.basis  6-31g-35.basis  6-31g-36.basis  6-31g-4.basis  6-31g-5.basis  6-31g-6.basis  6-31g-7.basis  6-31g-8.basis  6-31g-9.basis
basissets/sto-3g/: sto-3g-10.basis  sto-3g-11.basis  sto-3g-12.basis  sto-3g-13.basis  sto-3g-14.basis  sto-3g-15.basis  sto-3g-16.basis  sto-3g-17.basis  (+42 more)
(+16 files in other folders)
