[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Build dependencies
build-backend = "setuptools.build_meta"

[project]
name = "planck"  # Replace with your package name
version = "0.1.0"  # Initial version
description = "Python package to perform Hartee-Fock and post Hartee-Fock calculations on molecules."
readme = "README.md"  # Path to the long description file
license = {file = "LICENSE"}  # Path to the license file
authors = [
    {name = "Hemanth Haridas", email = "hemanthhari23@gmail.com"}
]

dependencies = [
    "numpy",  # List of runtime dependencies
    "scipy"
]
requires-python = ">=3.11"  # Minimum Python version

[tool.setuptools]
packages = [
    "src", 
    "src.basis", 
    "src.geometry", 
    "src.helpers", 
    "src.integrals", 
    "src.io", 
    "src.symmetry", 
    "src.calculators", 
    "src.calculators.hf", 
    "src.calculators.mp2", 
    "src.exceptions"
    ]  # Include subfolders as packages

[project.urls]
homepage = "https://github.com/HemanthHaridas/planck_v2"
repository = "https://github.com/HemanthHaridas/planck_v2"
documentation = "https://github.com/HemanthHaridas/planck_v2"